# autogen-examples

./: README.md  pyproject.toml
chroma_db/: chroma.sqlite3
db/: chroma.sqlite3
ocp_autogen/: chroma_db_def.py  oc_agent.py  tool.py  with_cli_and_code.py  with_group.py  with_group_v2.py  with_rag.py
ocp_autogen/rag/: fancy_shift.txt  htpasswd.md  registry_mirror.md
